--- a/index.html
+++ b/index.html
@@ -1,10 +1,79 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Busy Bus Route Data</title>
-    <link rel ="stylesheet" href="css/style.css">
-    <link rel ="stylesheet" href="css/reset.css">
+    <title></title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="reset" href="css/reset.css">
+    <meta name="author" content="Christina Barker">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <script src="https://use.fontawesome.com/37471687aa.js"></script>
   </head>
   <body>
+     <header>
+      <div class="container">
+        <div class="arrow-left">
+          <i class="fa fa-chevron-left fa-inverse fa-stack-2x" aria-hidden="true"></i>
+        </div>
+        <div class="stop"><h1>Washington & State</h1></div>
+      </div>
+     </header>
+       <div class="route info">Next bus arriving: Devon/Clark</div>
+
+        <section class= "direction"><h2>Eastbound</h2></section>
+
+         <li class="route-box">
+          <div class="float-left">
+            <h3>Next bus:</h3>
+            <p> Randolph/Harbor Dr. Every 20 minutes</p></div>
+
+          <div class="float-left">
+            <h3>Next Bus:</h3>
+             <p>Navy Pier Every 10 minutes</p></div></li><br>
+
+        <section class= "direction"><h2>Northbound</h2></section>
+
+          <li class="route-box">
+              <div class="float-left">
+                <h3>Next bus:</h3>
+                <p> Randolph/Harbor Dr. Every 20 minutes</p></div></li><br>
+
+
+        <section class= "direction"><h2>Southbound</h2></section>
+
+          <li class="route-box">
+               <div class="float-left">
+                    <h3>Next bus:</h3>
+                    <p> Randolph/Harbor Dr. Every 20 minutes</p></div>
+
+               <div class="float-left">
+                  <h3>Next Bus:</h3>
+                    <p>Navy Pier Every 10 minutes</p></div></li><br>
+
+        <section class= "direction"><h2>Reroute</h2></section>
+
+          <li class="route-box">
+                <div class="float-left">
+                    <h3>Next bus:</h3>
+                    <p> Randolph/Harbor Dr. Every 20 minutes</p></div></li><br>
+
+        <section class= "direction"><h2>Out of Service</h2></section>
+
+            <li class="route-box">
+                 <div class="float-left">
+                   <h3>Next bus:</h3>
+                         <p> Randolph/Harbor Dr. Every 20 minutes</p></div>
+
+                 <div class="float-left">
+                    <h3>Next Bus:</h3>
+                       <p>Navy Pier Every 10 minutes</p></div>
+
+                 <div class="float-left">
+                      <h3>Next Bus:</h3>
+                        <p>Navy Pier Every 10 minutes</p></div></li>
+
+
+     </div>
   </body>
+</html>
