--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="reset" href="css/reset.css">
-    <meta name="author" content="Christina Barker">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <script src="https://use.fontawesome.com/37471687aa.js"></script>
   </head>
   <body>
@@ -25,53 +22,91 @@
 
          <li class="route-box">
           <div class="float-left">
-            <h3>Next bus:</h3>
-            <p> Randolph/Harbor Dr. Every 20 minutes</p></div>
+            <div class="numberCircle">60</div>
+              <h3>Randolph/Harbor Dr.</h3>
+                <p> Every 20 minutes</p>
+          </div>
+          <div class="arrow-right">
+            <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+          </div>
 
           <div class="float-left">
-            <h3>Next Bus:</h3>
-             <p>Navy Pier Every 10 minutes</p></div></li><br>
+            <h3>Navy Pier</h3>
+            <div class="numberCircle">124</div>
+             <p>Every 10 minutes</p>
+           </div>
+           <div class="arrow-right">
+            <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+          </div>
+         </li>
+         <br>
 
         <section class= "direction"><h2>Northbound</h2></section>
 
           <li class="route-box">
               <div class="float-left">
-                <h3>Next bus:</h3>
-                <p> Randolph/Harbor Dr. Every 20 minutes</p></div></li><br>
+                <h3>Devon/Clark</h3>
+                 <div class="numberCircle">151</div>
+                 <p> Every 16 minutes</p>
+               </div>
+               <div class="arrow-right">
+            <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+            </div>
+          </li>
+        <br>
 
 
         <section class= "direction"><h2>Southbound</h2></section>
 
           <li class="route-box">
                <div class="float-left">
-                    <h3>Next bus:</h3>
-                    <p> Randolph/Harbor Dr. Every 20 minutes</p></div>
+                    <h3>103/Stony Island</h3>
+                    <div class="numberCircle">J14</div>
+                    <p> Every 15 minutes</p>
+                  </div>
 
                <div class="float-left">
-                  <h3>Next Bus:</h3>
-                    <p>Navy Pier Every 10 minutes</p></div></li><br>
+                  <h3>Navy Pier</h3>
+                    <div class="numberCircle">124</div>
+                    <p>Every 10 minutes</p>
+                  </div>
+                </li>
+                <br>
+
 
         <section class= "direction"><h2>Reroute</h2></section>
 
           <li class="route-box">
                 <div class="float-left">
-                    <h3>Next bus:</h3>
-                    <p> Randolph/Harbor Dr. Every 20 minutes</p></div></li><br>
+                  <h3>Jackson Park Express</h3>
+                    <div class="numberCircle">6x</div>
+                    <p> NA</p>
+                  </div>
+                </li>
+                <br>
+
 
         <section class= "direction"><h2>Out of Service</h2></section>
 
             <li class="route-box">
                  <div class="float-left">
-                   <h3>Next bus:</h3>
-                         <p> Randolph/Harbor Dr. Every 20 minutes</p></div>
+                   <h3>Cottage Grove</h3>
+                     <div class="numberCircle">4</div>
+                      <p> Resumes 12:10 am</p>
+                    </div>
 
                  <div class="float-left">
-                    <h3>Next Bus:</h3>
-                       <p>Navy Pier Every 10 minutes</p></div>
+                    <h3>Madison</h3>
+                      <div class="numberCircle">20</div>
+                       <p>Resumes 12:10 am</p>
+                     </div>
 
                  <div class="float-left">
-                      <h3>Next Bus:</h3>
-                        <p>Navy Pier Every 10 minutes</p></div></li>
+                      <h3>Streeterville/Taylor</h3>
+                        <div class="numberCircle">157</div>
+                        <p>Resumes 6:00 am</p>
+                      </div>
+                    </li>
 
 
      </div>
