--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                     <div class="numberCircle">124</div>
                     <p>Every 10 minutes</p>
                   </div>
+                  <div class="arrow-right">
+               <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+               </div>
                 </li>
                 <br>
 
@@ -82,8 +85,11 @@
                     <div class="numberCircle">6x</div>
                     <p> NA</p>
                   </div>
-                </li>
-                <br>
+                  <div class="arrow-right">
+               <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+               </div>
+             </li>
+          <br>
 
 
         <section class= "direction"><h2>Out of Service</h2></section>
@@ -94,19 +100,28 @@
                      <div class="numberCircle">4</div>
                       <p> Resumes 12:10 am</p>
                     </div>
+                    <div class="arrow-right">
+                 <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+                </div>
 
                  <div class="float-left">
                     <h3>Madison</h3>
                       <div class="numberCircle">20</div>
                        <p>Resumes 12:10 am</p>
                      </div>
+                     <div class="arrow-right">
+                  <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+                  </div>
 
                  <div class="float-left">
                       <h3>Streeterville/Taylor</h3>
                         <div class="numberCircle">157</div>
                         <p>Resumes 6:00 am</p>
                       </div>
-                    </li>
+                      <div class="arrow-right">
+                   <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+                   </div>
+                </li>
 
 
      </div>
