--- a/index.html
+++ b/index.html
@@ -9,121 +9,137 @@
   </head>
   <body>
      <header>
-      <div class="container">
+
+      <section class= "container">
         <div class="arrow-left">
-          <i class="fa fa-chevron-left fa-inverse fa-stack-2x" aria-hidden="true"></i>
+          <i class="fa fa-chevron-left fa-lg" aria-hidden="true"></i>
         </div>
-        <div class="stop"><h1>Washington & State</h1></div>
-      </div>
+        <div class="stop name"><h1>Washington & State</h1>
+        </div>
      </header>
-       <div class="route info">Next bus arriving: Devon/Clark</div>
+     <br>
+       <div class= "searchbox">
 
-        <section class= "direction"><h2>Eastbound</h2></section>
+       </div>
+     </div>
+     <br>
 
-         <li class="route-box">
-          <div class="float-left">
+      <div class= "direction">
+        <h2>Eastbound</h2>
+      </div>
+        <ul>
+         <li>
             <div class="numberCircle">60</div>
-              <h3>Randolph/Harbor Dr.</h3>
-                <p> Every 20 minutes</p>
+                <h3>Randolph/Harbor Dr.</h3>
+                <p class="frequency"> Every 20 minutes</p>
           </div>
           <div class="arrow-right">
-            <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+            <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
           </div>
 
-          <div class="float-left">
-            <h3>Navy Pier</h3>
             <div class="numberCircle">124</div>
-             <p>Every 10 minutes</p>
-           </div>
+               <h3>Navy Pier</h3>
+                 <p class="frequency">Every 10 minutes</p>
            <div class="arrow-right">
-            <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+            <i class="fa fa-chevron-right fa-" aria-hidden="true"></i>
           </div>
          </li>
+       </ul>
          <br>
 
-        <section class= "direction"><h2>Northbound</h2></section>
-
-          <li class="route-box">
-              <div class="float-left">
+      <div class= "direction">
+          <h2>Northbound</h2>
+        </div>
+        <ul>
+          <li>
+              <div class="numberCircle">151</div>
                 <h3>Devon/Clark</h3>
-                 <div class="numberCircle">151</div>
-                 <p> Every 16 minutes</p>
+                 <p class = "frequency">Every 16 minutes</p>
                </div>
                <div class="arrow-right">
-            <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+            <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
             </div>
           </li>
+        </ul>
         <br>
 
 
-        <section class= "direction"><h2>Southbound</h2></section>
-
-          <li class="route-box">
-               <div class="float-left">
-                    <h3>103/Stony Island</h3>
-                    <div class="numberCircle">J14</div>
-                    <p> Every 15 minutes</p>
+        <div class= "direction">
+          <h2>Southbound</h2>
+        </div>
+          <ul>
+           <li>
+              <div class="numberCircle">J14</div>
+                <h3>103/Stony Island</h3>
+                  <p class="frequency"> Every 15 minutes</p>
+                    <div class="arrow-right">
+                    <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
                   </div>
 
-               <div class="float-left">
+               <div class="numberCircle">124</div>
                   <h3>Navy Pier</h3>
-                    <div class="numberCircle">124</div>
-                    <p>Every 10 minutes</p>
-                  </div>
+                    <p class="frequency">Every 10 minutes</p>
                   <div class="arrow-right">
-               <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+               <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
                </div>
-                </li>
-                <br>
+            </li>
+          </ul>
+      <br>
+      <br>
+      <br>
 
 
-        <section class= "direction"><h2>Reroute</h2></section>
-
-          <li class="route-box">
-                <div class="float-left">
+        <div class= "direction">
+          <h2>Reroute</h2>
+         <ul>
+          <li>
+               <div class="numberCircle">6x</div>
                   <h3>Jackson Park Express</h3>
-                    <div class="numberCircle">6x</div>
-                    <p> NA</p>
-                  </div>
+                    <p class="frequency"> NA</p>
                   <div class="arrow-right">
-               <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+               <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
                </div>
              </li>
+           </ul>
+         </div>
           <br>
 
 
-        <section class= "direction"><h2>Out of Service</h2></section>
-
+        <div class= "direction">
+          <h2>Out of Service</h2>
+         <ul>
             <li class="route-box">
-                 <div class="float-left">
+                 <div class="route-name">
                    <h3>Cottage Grove</h3>
                      <div class="numberCircle">4</div>
-                      <p> Resumes 12:10 am</p>
+                      <p class="frequency"> Resumes 12:10 am</p>
                     </div>
                     <div class="arrow-right">
-                 <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+                 <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
                 </div>
 
-                 <div class="float-left">
+                 <div class="route-name">
                     <h3>Madison</h3>
                       <div class="numberCircle">20</div>
-                       <p>Resumes 12:10 am</p>
+                       <p class="frequency">Resumes 12:10 am</p>
                      </div>
                      <div class="arrow-right">
-                  <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+                  <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
                   </div>
 
-                 <div class="float-left">
+                 <div class="route-name">
                       <h3>Streeterville/Taylor</h3>
                         <div class="numberCircle">157</div>
-                        <p>Resumes 6:00 am</p>
+                        <p class="frequency">Resumes 6:00 am</p>
                       </div>
                       <div class="arrow-right">
-                   <i class="fa fa-chevron-right fa-stack-2x" aria-hidden="true"></i>
+                   <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
                    </div>
                 </li>
+              </ul>
+            </div>
 
 
-     </div>
+     </section>
   </body>
 </html>
