--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="reset" href="css/reset.css">
+    <link href="CSS/style.css" rel="stylesheet">
+    <link href="CSS/reset.css" rel="reset">
     <script src="https://use.fontawesome.com/37471687aa.js"></script>
   </head>
   <body>
