--- a/index.html
+++ b/index.html
@@ -8,138 +8,152 @@
     <script src="https://use.fontawesome.com/37471687aa.js"></script>
   </head>
   <body>
-     <header>
-
+    <header>
       <section class= "container">
         <div class="arrow-left">
           <i class="fa fa-chevron-left fa-lg" aria-hidden="true"></i>
         </div>
-        <div class="stop name"><h1>Washington & State</h1>
+        <div class="stop"><h1>Washington & State</h1>
         </div>
-     </header>
-     <br>
-       <div class= "searchbox">
 
+ </section>
+</header>
+     <br>
        </div>
      </div>
      <br>
-
       <div class= "direction">
         <h2>Eastbound</h2>
       </div>
+      <hr>
         <ul>
          <li>
-            <div class="numberCircle">60</div>
+            <div class="numberCircle"> 60 </div>
                 <h3>Randolph/Harbor Dr.</h3>
                 <p class="frequency"> Every 20 minutes</p>
-          </div>
           <div class="arrow-right">
-            <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
+            <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
           </div>
+        </li>
+      </ul>
+      <hr>
 
-            <div class="numberCircle">124</div>
+         <ul>
+           <li>
+            <div class="numberCircle"> 124</div>
                <h3>Navy Pier</h3>
-                 <p class="frequency">Every 10 minutes</p>
+                 <p class="frequency">Every <span> 10 minutes</span></p>
            <div class="arrow-right">
-            <i class="fa fa-chevron-right fa-" aria-hidden="true"></i>
+            <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
           </div>
          </li>
        </ul>
-         <br>
+       <hr>
+     <br>
 
       <div class= "direction">
-          <h2>Northbound</h2>
+        <h2>Northbound</h2>
         </div>
+        <hr>
         <ul>
           <li>
-              <div class="numberCircle">151</div>
+              <div class="numberCircle"> 151</div>
                 <h3>Devon/Clark</h3>
                  <p class = "frequency">Every 16 minutes</p>
-               </div>
                <div class="arrow-right">
-            <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
+            <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
             </div>
           </li>
         </ul>
-        <br>
+        <hr>
+      <br>
 
 
         <div class= "direction">
           <h2>Southbound</h2>
         </div>
+        <hr>
           <ul>
            <li>
-              <div class="numberCircle">J14</div>
+              <div class="numberCircle"> J14</div>
                 <h3>103/Stony Island</h3>
                   <p class="frequency"> Every 15 minutes</p>
                     <div class="arrow-right">
-                    <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
+                    <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                   </div>
+                </li>
+              </ul>
+              <hr>
 
-               <div class="numberCircle">124</div>
+         <ul>
+            <li>
+               <div class="numberCircle"> 124</div>
                   <h3>Navy Pier</h3>
                     <p class="frequency">Every 10 minutes</p>
                   <div class="arrow-right">
-               <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
+               <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                </div>
             </li>
           </ul>
-      <br>
-      <br>
+          <hr>
       <br>
 
 
-        <div class= "direction">
-          <h2>Reroute</h2>
-         <ul>
-          <li>
-               <div class="numberCircle">6x</div>
+      <div class= "direction">
+        <h2>Reroute</h2>
+         </div>
+        <hr>
+          <ul>
+            <li>
+               <div class="numberCircle"> 6x</div>
                   <h3>Jackson Park Express</h3>
                     <p class="frequency"> NA</p>
                   <div class="arrow-right">
-               <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
+               <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                </div>
              </li>
            </ul>
-         </div>
-          <br>
+          <hr>
+        <br>
 
 
-        <div class= "direction">
-          <h2>Out of Service</h2>
-         <ul>
-            <li class="route-box">
-                 <div class="route-name">
+      <div class= "direction">
+        <h2>Out of Service</h2>
+        </div>
+        <hr>
+          <ul>
+             <li>
+                <div class="numberCircle"> 4</div>
                    <h3>Cottage Grove</h3>
-                     <div class="numberCircle">4</div>
-                      <p class="frequency"> Resumes 12:10 am</p>
-                    </div>
-                    <div class="arrow-right">
-                 <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
-                </div>
-
-                 <div class="route-name">
-                    <h3>Madison</h3>
-                      <div class="numberCircle">20</div>
-                       <p class="frequency">Resumes 12:10 am</p>
-                     </div>
+                    <p class="frequency"> Resumes 12:10 am</p>
                      <div class="arrow-right">
-                  <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
+                 <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
+                </div>
+              </li>
+            </ul>
+          <hr>
+            <ul>
+              <li>
+                <div class="numberCircle"> 20</div>
+                  <h3>Madison</h3>
+                    <p class="frequency">Resumes 12:10 am</p>
+                     <div class="arrow-right">
+                      <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                   </div>
-
-                 <div class="route-name">
+                </li>
+              </ul>
+            <hr>
+             <ul>
+               <li>
+                 <div class="numberCircle"> 157</div>
                       <h3>Streeterville/Taylor</h3>
-                        <div class="numberCircle">157</div>
                         <p class="frequency">Resumes 6:00 am</p>
-                      </div>
                       <div class="arrow-right">
-                   <i class="fa fa-chevron-right fa-lg" aria-hidden="true"></i>
+                   <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                    </div>
                 </li>
               </ul>
-            </div>
-
-
+            <hr>
      </section>
   </body>
 </html>
