--- a/index.html
+++ b/index.html
@@ -13,41 +13,47 @@
         <div class="arrow-left">
           <i class="fa fa-chevron-left fa-lg" aria-hidden="true"></i>
         </div>
-        <div class="stop"><h1>Washington & State</h1>
-        </div>
-
+            <div class="stop"><h1>Washington & State</h1>
+           </div>
+           <br>
+           <div class="search">
+             <input type="text" class="searchTerm" placeholder="search other routes...">
+               <button type="submit" class="searchButton">
+                <i class="fa fa-search"></i>
+        </button>
+     </div>
+   </div>
  </section>
 </header>
+     <br>
+     <br>
      <br>
        </div>
      </div>
      <br>
+     <section class ="container">
       <div class= "direction">
         <h2>Eastbound</h2>
       </div>
       <hr>
-        <ul>
-         <li>
+        <div class="block">
             <div class="numberCircle"> 60 </div>
-                <h3>Randolph/Harbor Dr.</h3>
-                <p class="frequency"> Every 20 minutes</p>
-          <div class="arrow-right">
-            <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
+            <div class="route"><h3> Randolph/Harbor Dr.</h3></div>
+            <div class="frequency">Every 20 minutes</div>
+            <div class="arrow-right">
+               <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
           </div>
-        </li>
-      </ul>
+        </div>
       <hr>
 
-         <ul>
-           <li>
+          <div class="block">
             <div class="numberCircle"> 124</div>
-               <h3>Navy Pier</h3>
-                 <p class="frequency">Every <span> 10 minutes</span></p>
-           <div class="arrow-right">
-            <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
+            <div class= "route"> <h3> Navy Pier</h3></div>
+            <div class="frequency">Every 10 minutes</div>
+            <div class="arrow-right">
+              <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
           </div>
-         </li>
-       </ul>
+        </div>
        <hr>
      <br>
 
@@ -55,16 +61,15 @@
         <h2>Northbound</h2>
         </div>
         <hr>
-        <ul>
-          <li>
+
+          <div class="block">
               <div class="numberCircle"> 151</div>
-                <h3>Devon/Clark</h3>
-                 <p class = "frequency">Every 16 minutes</p>
+                <div class="route"><h3> Devon/Clark</h3></div>
+                 <div class="frequency">Every 16 minutes</div>
                <div class="arrow-right">
-            <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
+                 <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
             </div>
-          </li>
-        </ul>
+        </div>
         <hr>
       <br>
 
@@ -73,28 +78,24 @@
           <h2>Southbound</h2>
         </div>
         <hr>
-          <ul>
-           <li>
+           <div class="block">
               <div class="numberCircle"> J14</div>
-                <h3>103/Stony Island</h3>
-                  <p class="frequency"> Every 15 minutes</p>
+                <div class="route"><h3> 103/Stony Island</h3></div>
+                  <div class="frequency"> Every 15 minutes</div>
                     <div class="arrow-right">
-                    <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
+                     <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                   </div>
-                </li>
-              </ul>
+                </div>
               <hr>
 
-         <ul>
-            <li>
+            <div class="block">
                <div class="numberCircle"> 124</div>
-                  <h3>Navy Pier</h3>
-                    <p class="frequency">Every 10 minutes</p>
-                  <div class="arrow-right">
-               <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
+                <div class="route"><h3> Navy Pier</h3></div>
+                  <div class="frequency">Every 10 minutes</div>
+                    <div class="arrow-right">
+                     <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                </div>
-            </li>
-          </ul>
+            </div>
           <hr>
       <br>
 
@@ -103,16 +104,14 @@
         <h2>Reroute</h2>
          </div>
         <hr>
-          <ul>
-            <li>
+            <div class="block">
                <div class="numberCircle"> 6x</div>
-                  <h3>Jackson Park Express</h3>
-                    <p class="frequency"> NA</p>
-                  <div class="arrow-right">
-               <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
+                  <div class="route"><h3> Jackson Park Express</h3></div>
+                    <div class="frequency"> NA</div>
+                     <div class="arrow-right">
+                       <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                </div>
-             </li>
-           </ul>
+             </div>
           <hr>
         <br>
 
@@ -121,38 +120,33 @@
         <h2>Out of Service</h2>
         </div>
         <hr>
-          <ul>
-             <li>
+             <div class="block">
                 <div class="numberCircle"> 4</div>
-                   <h3>Cottage Grove</h3>
-                    <p class="frequency"> Resumes 12:10 am</p>
+                   <div class="route"><h3>Cottage Grove</h3></div>
+                    <div class="frequency">Resumes 12:10 am</div>
                      <div class="arrow-right">
-                 <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
+                      <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                 </div>
-              </li>
-            </ul>
+              </div>
           <hr>
-            <ul>
-              <li>
+
+              <div class="block">
                 <div class="numberCircle"> 20</div>
-                  <h3>Madison</h3>
-                    <p class="frequency">Resumes 12:10 am</p>
+                  <div class="route"><h3>Madison</h3></div>
+                    <div class="frequency">Resumes 12:10 am</div>
                      <div class="arrow-right">
                       <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                   </div>
-                </li>
-              </ul>
+                </div>
             <hr>
-             <ul>
-               <li>
+               <div class="block">
                  <div class="numberCircle"> 157</div>
-                      <h3>Streeterville/Taylor</h3>
-                        <p class="frequency">Resumes 6:00 am</p>
+                    <div class="route"><h3>Streeterville/Taylor</h3></div>
+                        <div class="frequency">Resumes 6:00 am</div>
                       <div class="arrow-right">
                    <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                    </div>
-                </li>
-              </ul>
+                </div>
             <hr>
      </section>
   </body>
