--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <title></title>
     <link href="CSS/style.css" rel="stylesheet">
     <link href="CSS/reset.css" rel="reset">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <script src="https://use.fontawesome.com/37471687aa.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
       <section class= "container">
         <div class="arrow-left">
-          <i class="fa fa-chevron-left fa-lg" aria-hidden="true"></i>
+          <i class="fa fa-chevron-left fa" aria-hidden="true"><p class="map">Map</p></i>
         </div>
             <div class="stop"><h1>Washington & State</h1>
            </div>
@@ -25,12 +27,7 @@
    </div>
  </section>
 </header>
-     <br>
-     <br>
-     <br>
-       </div>
-     </div>
-     <br>
+
      <section class ="container">
       <div class= "direction">
         <h2>Eastbound</h2>
@@ -39,7 +36,7 @@
         <div class="block">
             <div class="numberCircle"> 60 </div>
             <div class="route"><h3> Randolph/Harbor Dr.</h3></div>
-            <div class="frequency">Every 20 minutes</div>
+            <div class="frequency">8:20</div>
             <div class="arrow-right">
                <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
           </div>
@@ -49,13 +46,12 @@
           <div class="block">
             <div class="numberCircle"> 124</div>
             <div class= "route"> <h3> Navy Pier</h3></div>
-            <div class="frequency">Every 10 minutes</div>
+            <div class="frequency">8:10</div>
             <div class="arrow-right">
               <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
           </div>
         </div>
        <hr>
-     <br>
 
       <div class= "direction">
         <h2>Northbound</h2>
@@ -65,13 +61,12 @@
           <div class="block">
               <div class="numberCircle"> 151</div>
                 <div class="route"><h3> Devon/Clark</h3></div>
-                 <div class="frequency">Every 16 minutes</div>
+                 <div class="frequency">8:25</div>
                <div class="arrow-right">
                  <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
             </div>
         </div>
         <hr>
-      <br>
 
 
         <div class= "direction">
@@ -81,7 +76,7 @@
            <div class="block">
               <div class="numberCircle"> J14</div>
                 <div class="route"><h3> 103/Stony Island</h3></div>
-                  <div class="frequency"> Every 15 minutes</div>
+                  <div class="frequency"> 8:30</div>
                     <div class="arrow-right">
                      <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                   </div>
@@ -91,19 +86,17 @@
             <div class="block">
                <div class="numberCircle"> 124</div>
                 <div class="route"><h3> Navy Pier</h3></div>
-                  <div class="frequency">Every 10 minutes</div>
+                  <div class="frequency">8:27</div>
                     <div class="arrow-right">
                      <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                </div>
             </div>
           <hr>
-      <br>
-
 
       <div class= "direction">
         <h2>Reroute</h2>
          </div>
-        <hr>
+          <hr>
             <div class="block">
                <div class="numberCircle"> 6x</div>
                   <div class="route"><h3> Jackson Park Express</h3></div>
@@ -113,8 +106,6 @@
                </div>
              </div>
           <hr>
-        <br>
-
 
       <div class= "direction">
         <h2>Out of Service</h2>
@@ -123,7 +114,7 @@
              <div class="block">
                 <div class="numberCircle"> 4</div>
                    <div class="route"><h3>Cottage Grove</h3></div>
-                    <div class="frequency">Resumes 12:10 am</div>
+                    <div class="frequency"> 12:10 </div>
                      <div class="arrow-right">
                       <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                 </div>
@@ -133,7 +124,7 @@
               <div class="block">
                 <div class="numberCircle"> 20</div>
                   <div class="route"><h3>Madison</h3></div>
-                    <div class="frequency">Resumes 12:10 am</div>
+                    <div class="frequency"> 12:10 am</div>
                      <div class="arrow-right">
                       <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                   </div>
@@ -142,7 +133,7 @@
                <div class="block">
                  <div class="numberCircle"> 157</div>
                     <div class="route"><h3>Streeterville/Taylor</h3></div>
-                        <div class="frequency">Resumes 6:00 am</div>
+                        <div class="frequency"> 6:00 am</div>
                       <div class="arrow-right">
                    <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                    </div>
