--- a/index.html
+++ b/index.html
@@ -73,10 +73,15 @@
           <h2>Southbound</h2>
         </div>
         <hr>
-           <div class="block">
+          <!-- <div class="block">
               <div class="numberCircle"> J14</div>
                 <div class="route"><h3> 103/Stony Island</h3></div>
-                  <div class="frequency"> 8:30</div>
+                  <div class="frequency"> 8:30</div> -->
+                  <ul>
+                    <li><div class="numberCircle"> J14</div></li>
+                    <li><h3> 103/Stony Island</h3>
+                    <li> 8:30</li>
+                  </ul>
                     <div class="arrow-right">
                      <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                   </div>
