--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         <h2>Northbound</h2>
         </div>
         <hr>
-
-          <div class="block">
-              <div class="numberCircle"> 151</div>
-                <div class="route"><h3> Devon/Clark</h3></div>
-                 <div class="frequency">8:25</div>
+           <ul>
+             <li><div class="numberCircle"> 151</div></li>
+             <li><h3> Devon/Clark</h3></li>
+             <li>8:25</li>
+           </ul>
                <div class="arrow-right">
                  <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
             </div>
