--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <ul>
                     <li><div class="numberCircle"> J14</div></li>
                     <li><h3> 103/Stony Island</h3>
-                    <li> 8:30</li>
+                    <li id="frequency"> 8:30</li>
                   </ul>
                     <div class="arrow-right">
                      <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
