--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class= "direction">
         <h2>Eastbound</h2>
       </div>
-      <hr>
+
         <ul class="block">
             <li class="numberCircle"> 60 </li>
             <li class="route">Randolph/Harbor Dr.
@@ -41,12 +41,10 @@
               </ul>
             </li>
             <li class="arrival"> Arr @ 8:20</li>
-            </ul>
-            <div class="arrow-right">
+            <li class="arrow-right">
                <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
-          </div>
-        </div>
-      <hr>
+          </li>
+        </ul>
 
           <ul class="block">
             <li class="numberCircle"> 124</li>
@@ -56,17 +54,15 @@
           </ul>
             </li>
             <li class="arrival"> Arr @ 8:10</li>
-        </ul>
-            <div class="arrow-right">
+            <li class="arrow-right">
               <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
-          </div>
-        </div>
-       <hr>
+            </li>
+          </ul>
+
 
       <div class= "direction">
         <h2>Northbound</h2>
         </div>
-        <hr>
            <ul class="block">
              <li class="numberCircle"> 151</li>
              <li class="route"> Devon/Clark
@@ -75,32 +71,27 @@
                  </ul>
              </li>
              <li class="arrival"> Arr @ 8:25</li>
-           </ul>
-               <div class="arrow-right">
+             <li class="arrow-right">
                  <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
-            </div>
-        </div>
-        <hr>
+            </li>
+          </ul>
 
 
         <div class= "direction">
           <h2>Southbound</h2>
         </div>
-        <hr>
                   <ul class="block">
-                    <li><div class="numberCircle"> J14</div></li>
+                    <li class="numberCircle"> J14</li>
                     <li class="route">103/Stony Island
                       <ul>
                         <li class="frequency"> Runs every 15 min.</li>
                       </ul>
                     </li>
                     <li class="arrival"> Arr @ 8:30</li>
-                  </ul>
-                    <div class="arrow-right">
+                    <li class="arrow-right">
                      <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
-                  </div>
-                </div>
-              <hr>
+                  </li>
+                </ul>
 
             <ul class="block">
                <li class="numberCircle"> 124</li>
@@ -110,53 +101,44 @@
                  </ul>
                </li>
                <li class="arrival"> Arr @ 8:27</li>
-           </ul>
-                    <div class="arrow-right">
-                     <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
-               </div>
-            </div>
-          <hr>
+               <li class="arrow-right">
+                  <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
+               </li>
+            </ul>
 
       <div class= "direction">
         <h2>Reroute</h2>
          </div>
-          <hr>
+
             <ul class="block">
                <li class="numberCircle"> 6x</div>
                <li class="route">Jackson Park Express
                  <ul>
-                   <li class="frequency"> NA</li>
+                   <li class="frequency"> Not Available</li>
                  </ul>
                </li>
                <li class="arrival"> NA</li>
+               <li class="arrow-right">
+                  <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
+               </li>
              </ul>
-                     <div class="arrow-right">
-                       <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
-               </div>
-             </div>
-          <hr>
 
       <div class= "direction">
         <h2>Out of Service</h2>
         </div>
-        <hr>
+
              <ul class="block">
               <li class="numberCircle"> 4</li>
               <li class="route">Cottage Grove
                 <ul>
                 <li class="frequency"> Res svc @ 12:10 am</li>
             </ul>
-           </li>
-              <li class="frequency"> Res svc @ 12:10 am</li>
-          </ul>
-              </li>
-              <li class="arrival"> Arr @ 12:10</li>
-          </ul>
-                     <div class="arrow-right">
-                      <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
-                </div>
-              </div>
-          <hr>
+          </li>
+              <li class="arrival"> NA</li>
+              <li class="arrow-right">
+                 <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
+               </li>
+             </ul>
 
               <ul class="block">
                 <li class="numberCircle"> 20</li>
@@ -166,12 +148,11 @@
                   </ul>
                 </li>
                 <li class="arrival"> NA</li>
-              </ul>
-                     <div class="arrow-right">
-                      <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
-                  </div>
-                </div>
-            <hr>
+                <li class="arrow-right">
+                   <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
+                 </li>
+               </ul>
+
                <ul class="block">
                  <li class="numberCircle">157</li>
                  <li class="route">Streeterville/Taylor
@@ -180,12 +161,11 @@
                     </ul>
                   </li>
                  <li class="arrival"> NA</li>
-                </ul>
-                      <div class="arrow-right">
+                <li class="arrow-right">
                    <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
-                   </div>
-                </div>
-            <hr>
+                 </li>
+               </ul>
+
      </section>
   </body>
 </html>
