--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link href="CSS/style.css" rel="stylesheet">
     <link href="CSS/reset.css" rel="reset">
+    <link href="CSS/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <script src="https://use.fontawesome.com/37471687aa.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
         <div class="arrow-left">
           <i class="fa fa-chevron-left fa" aria-hidden="true"><p class="map">Map</p></i>
         </div>
-            <div class="stop"><h1>Washington & State</h1>
+            <div class="stop"><h1>Bus Times for Washington & State</h1>
            </div>
            <br>
            <div class="search">
