--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="stop"><h1>Bus Times for Washington & State</h1>
            </div>
            <br>
-           <div class="search">
+          <div class="search">
              <input type="text" class="searchTerm" placeholder="search other routes...">
                <button type="submit" class="searchButton">
                 <i class="fa fa-search"></i>
@@ -38,7 +38,7 @@
                 <li class="frequency"> Runs every 20 min.</li>
               </ul>
             </li>
-            <li class="arrival"> Arr @ 8:20</li>
+            <li class="arrival"> Arriving 8:20</li>
             <li class="arrow-right">
                <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
           </li>
@@ -51,7 +51,7 @@
             <li class="frequency">Runs every 10 min.</li>
           </ul>
             </li>
-            <li class="arrival"> Arr @ 8:10</li>
+            <li class="arrival"> Arriving 8:10</li>
             <li class="arrow-right">
               <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
             </li>
@@ -65,7 +65,7 @@
                  <li class="frequency"> Runs every 16 min.</li>
                  </ul>
              </li>
-             <li class="arrival"> Arr @ 8:25</li>
+             <li class="arrival"> Arriving 8:25</li>
              <li class="arrow-right">
                  <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
             </li>
@@ -81,7 +81,7 @@
                         <li class="frequency"> Runs every 15 min.</li>
                       </ul>
                     </li>
-                    <li class="arrival"> Arr @ 8:30</li>
+                    <li class="arrival"> Arriving 8:30</li>
                     <li class="arrow-right">
                      <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                   </li>
@@ -94,7 +94,7 @@
                    <li class="frequency"> Runs every 10 min</li>
                  </ul>
                </li>
-               <li class="arrival"> Arr @ 8:27</li>
+               <li class="arrival"> Arriving 8:27</li>
                <li class="arrow-right">
                   <i class="fa fa-chevron-right fa" aria-hidden="true"></i>
                </li>
