update one: completed

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+   <section class= "container">
     <header>
-      <section class= "container">
-        <div class="arrow-left">
+        <div class="hero">
+         <div class="arrow-left">
           <i class="fa fa-chevron-left fa" aria-hidden="true"><p class="map">Map</p></i>
-        </div>
+         </div>
             <div class="stop"><h1>Washington & State</h1>
            </div>
            <br>
@@ -25,10 +26,9 @@
         </button>
      </div>
    </div>
- </section>
 </header>
 
-     <section class ="container">
+<main>
       <div class= "direction">
         <h2>Eastbound</h2>
       </div>
@@ -139,6 +139,7 @@
                    </div>
                 </div>
             <hr>
+       </main>
      </section>
   </body>
 </html>
